assets/queries/cloudFormation/aws/db_security_group_with_public_scope/test/negative2.yaml
Resources:
  # This sample does not flag because "PubliclyAccessible" is set to false
  # Legacy RDS DBSecurityGroup with inline ingress
  DbSecurityByEC2SecurityGroupInline:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      GroupDescription: "Legacy inline ingress"
      DBSecurityGroupIngress:
        - CIDRIP: 0.0.0.0/0

  # Legacy RDS DBSecurityGroup with standalone ingress
  DbSecurityByEC2SecurityGroupStandalone:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      GroupDescription: "Legacy standalone ingress"

  DbSecurityIngressRule:
    Type: AWS::RDS::DBSecurityGroupIngress
    Properties:
      DBSecurityGroupName: !Ref DbSecurityByEC2SecurityGroupStandalone
      CIDRIP: 0.0.0.0/0

  # EC2 Security Group with inline IPv4 and IPv6 rules
  DBEC2SecurityGroupInline:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Inline IPv4 and IPv6 ingress"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0

  # EC2 Security Group with standalone ingress rules
  DBEC2SecurityGroupStandalone:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Standalone IPv4 and IPv6 ingress"
      VpcId: !Ref VPC

  DBEC2SecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DBEC2SecurityGroupStandalone
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: 0.0.0.0/0

  DBEC2SecurityGroupIngressIPv6:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DBEC2SecurityGroupStandalone
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIpv6: ::/0

  # RDS Instance referencing all security groups
  DBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      PubliclyAccessible: false     #set to false
      DBName: !Ref DBName
      Engine: MySQL
      DBSecurityGroups:
        - !Ref DbSecurityByEC2SecurityGroupInline
        - !Ref DbSecurityByEC2SecurityGroupStandalone
      VPCSecurityGroups:
        - !Ref DBEC2SecurityGroupInline
        - !Ref DBEC2SecurityGroupStandalone
